<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordDetailsActivity">

    <LinearLayout
        android:id="@+id/RD_LL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/RD_LL_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_orange"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/background_orange"
                app:srcCompat="@drawable/arrow_back_image" />

            <TextView
                android:id="@+id/RD_title"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/record_details_title"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/speed_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/speed_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_speed_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/accuracy_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/accuracy_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_accuracy_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_right_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/right_word_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Right Word"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_right_word_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_wrong_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wrong_word_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Wrong Word"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_wrong_word_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Date"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_date_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_test_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/test_mode_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Test Mode"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_test_mode_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_gray"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/duration_hint"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="Test Duration"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/RD_duration_data"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:text="1 Minute"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>